[package]
name = "ac-compose-macros"
version = "0.2.3"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }
log = { version = "0.4.14", default-features = false }

# substrate
sp-core = { default-features = false, features = ["full_crypto", "serde"], git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }
sp-runtime = { default-features = false, features = ["full_crypto", "serde"], git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives" }

# need to add this for the app_crypto macro
sp-application-crypto = { default-features = false, git = "https://github.com/haerdib/substrate.git", branch = "add-serde-feature-to-primitives", features = ["full_crypto", "serde"] }

# local
ac-primitives = { path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    # substrate
    "sp-core/std",
    "sp-runtime/std",
    "sp-application-crypto/std",
    # local
    "ac-primitives/std",
]
